# oxcalfrp

./: .gitignore  CMakeLists.txt
.github/workflows/: alma.yml  build.yml  manual.yml  win_manual.yml
cmake/: CPM.cmake  generate_resources.cmake
src/: MKlimenko_embed.hpp  MKlimenko_main.cpp  MKlimenko_resource.hpp  MKlimenko_saver.hpp  aboutdialog.cpp  aboutdialog.h  calendarpanel.cpp  calendarpanel.h  database_month01.txt  database_month02.txt  database_month03.txt  database_month04.txt  database_month05.txt  database_month06.txt  database_month07.txt  database_month08.txt  database_month09.txt  database_month10.txt  database_month11.txt  database_month12.txt  fs_mem_rc.cpp  fs_mem_rc.h  main.cpp  main.h  mainframe.cpp  mainframe.h  monthchoicectrl.cpp  monthchoicectrl.h  numbertextctrl.cpp  numbertextctrl.h  resource_header_name_gen.cpp  sql_generator.cpp  wxZipper.cpp  yearinputdialog.cpp  yearinputdialog.h
